--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ button:hover { filter: brightness(1.2); }
    LAYOUT PRINCIPAL
    =====================================================================================*/
 #app {
-  padding-top: 8px;
+  padding: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -195,7 +195,8 @@ height: 46px;
   align-items: flex-start;
 }
 #xp-hoje {
-  margin: 4px auto 0 auto;
+  margin-top: 4px; 
+  margin-left: 34px;
   font-size: 14px;
   font-weight: bold;
   color: var(--c-neutral);
