--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ button:hover { filter: brightness(1.2); }
    LAYOUT PRINCIPAL
    =====================================================================================*/
 #app {
-  padding: 16px;
+  padding: 16px; /* se mudar fica ampliando no safari*/
   display: flex;
   flex-direction: column;
   align-items: center;
