--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -56,9 +56,20 @@ button:active{transform:scale(.96);}
   background:var(--surface);
   color:var(--text);
   border-radius:var(--radius);
-  overflow-wrap:break-word;
-  word-break:break-word;
-  white-space:pre-wrap;
+
+  /* quebra automática de linha no próprio contêiner */
+  overflow-wrap:break-word;   /* moderno */
+  word-break:break-word;      /* fallback */
+  white-space:pre-wrap;       /* mantém \n digitadas */
+}
+
+/* força a mesma quebra para QUALQUER elemento dentro do editor */
+#editor *,
+#editor *::before,
+#editor *::after{
+  white-space:pre-wrap !important;
+  overflow-wrap:break-word !important;
+  word-break:break-word   !important;
 }
 #editor p{margin:2px 0;line-height:1.3;}
 .hidden-text{
