--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -83,17 +83,30 @@ button:active{transform:scale(.96);}
 
 #editor p{margin:2px 0;line-height:1.3;}
 /* tarja de texto -------------------------------------------------- */
+/* ---------- TARJA DE TEXTO ---------- */
 .hidden-text{
+  /* visual */
   background:#404040;
   color:transparent;
-  user-select:none;
-  cursor:pointer;
   border-radius:var(--radius);
-  padding:0 2px;
+  cursor:pointer;
+  user-select:none;
 
-  /* ↓ espaço vertical minúsculo para separar linhas empilhadas */
-  display:inline-block;      /* permite margin vertical em elementos “inline” */
-  margin:2px 0;              /* 2 px em cima e embaixo: ajuste à vontade */
+  /* espaçamento */
+  display:inline;                   /* permite quebra interna */
+  padding:2px 2px;                  /* respiro interno */
+  margin:2px 0;                     /* respiro entre tarjas diferentes */
+
+  /* faz a tarja “clonar” em cada linha quebrada */
+  -webkit-box-decoration-break:clone;
+  box-decoration-break:clone;
+  
+  transition:background .2s;
+}
+
+.hidden-text.revealed{
+  background:var(--reveal-bg);
+  color:inherit;
 }
 .hidden-text.revealed{background:var(--reveal-bg);color:inherit;}
 /* ---------- IMAGENS & TARJAS ---------- */
@@ -136,7 +149,7 @@ button:active{transform:scale(.96);}
 
   <button id="insertBtn">◼️ Ocultar Imagem (Tarja)</button>
   <button id="concluirBtn" style="display:none">Concluir</button>
-  <button id="desfazerBtn" style="display:none">Desfazer</button>
+  <button id="deleteTarjaBtn" style="display:none">Apagar Tarja</button>
 
   <span id="message"></span>
 </div>
@@ -321,20 +334,59 @@ function insertImg(src){
 }
 
 /* ---------- TARJAS ---------- */
-const insertBtn=document.getElementById('insertBtn'),concluirBtn=document.getElementById('concluirBtn'),desfazerBtn=document.getElementById('desfazerBtn');
+const insertBtn=document.getElementById('insertBtn'),concluirBtn=document.getElementById('concluirBtn'),deleteTarjaBtn = document.getElementById('deleteTarjaBtn');
+let deleteTarjaMode = false;   // estamos aguardando o clique em uma tarja?
 const message=document.getElementById('message');
 let editingTarjas=false,selectedImage=null;const tarjasMap=new Map();
 insertBtn.onclick=()=>{editingTarjas=true;message.textContent='Clique na imagem…';toggleTarjaBtns(true);};
 concluirBtn.onclick=endEditing;
-desfazerBtn.onclick=()=>{if(!selectedImage)return;const arr=tarjasMap.get(selectedImage)||[];const last=arr.pop();if(last)last.remove();};
-function toggleTarjaBtns(on){insertBtn.style.display=on?'none':'inline-block';concluirBtn.style.display=on?'inline-block':'none';desfazerBtn.style.display=on?'inline-block':'none';}
-editor.addEventListener('click',e=>{
-  if(!editingTarjas && e.target.classList.contains('tarja')){
-    e.stopPropagation();const t=e.target;const comp=getComputedStyle(t).backgroundColor;
-    t.style.backgroundColor=comp==='rgba(0, 0, 0, 0.4)'?'rgba(0,0,0,1)':'rgba(0,0,0,0.4)';
+      deleteTarjaBtn.onclick = () => {
+  if (!selectedImage){
+    message.textContent = 'Selecione antes a imagem.';
+    return;
   }
-  if(editingTarjas && e.target.tagName==='IMG')selectImage(e.target);
+  deleteTarjaMode = true;
+  message.textContent = 'Clique na tarja que deseja apagar.';
+};
+desfazerBtn.onclick=()=>{if(!selectedImage)return;const arr=tarjasMap.get(selectedImage)||[];const last=arr.pop();if(last)last.remove();};
+function toggleTarjaBtns(on){
+  insertBtn.style.display     = on ? 'none'         : 'inline-block';
+  concluirBtn.style.display   = on ? 'inline-block' : 'none';
+  deleteTarjaBtn.style.display= on ? 'inline-block' : 'none';
+}
+editor.addEventListener('click', e => {
+
+  /* ------------- apagar tarja ------------- */
+  if (editingTarjas && deleteTarjaMode && e.target.classList.contains('tarja')){
+    const tarja = e.target;
+    tarja.remove();                        // remove do DOM
+
+    /* remove também do Map */
+    const arr = tarjasMap.get(selectedImage) || [];
+    const idx = arr.indexOf(tarja);
+    if (idx > -1) arr.splice(idx, 1);
+
+    deleteTarjaMode = false;
+    message.textContent = 'Tarja apagada.';
+    return;                                // nada mais a fazer
+  }
+
+  /* ------------- alternar visibilidade da tarja (modo leitura) ------------- */
+  if (!editingTarjas && e.target.classList.contains('tarja')){
+    e.stopPropagation();
+    const t = e.target;
+    const comp = getComputedStyle(t).backgroundColor;
+    t.style.backgroundColor =
+      comp === 'rgba(0, 0, 0, 0.4)' ? 'rgba(0,0,0,1)' : 'rgba(0,0,0,0.4)';
+    return;
+  }
+
+  /* ------------- selecionar imagem para colocar tarjas ------------- */
+  if (editingTarjas && e.target.tagName === 'IMG'){
+    selectImage(e.target);
+  }
 });
+
 function selectImage(img){
   selectedImage=img;message.textContent='Desenhe a tarja…';
   if(!img._listeners)setupDrawing(img);
@@ -393,7 +445,8 @@ function endEditing(){
     }
   });
   tarjasMap.forEach(arr=>arr.forEach(t=>interact(t).unset()));
-  selectedImage=null;
+  deleteTarjaMode = false;   // cancela se estava aguardando clique
+selectedImage=null;
 }
 
 /* ---------- RESIZE PROPORCIONAL ---------- */
