--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Editor de Texto – Modo Escuro (v3.5)</title>
+<title>Editor de Texto – Modo Escuro (v3.6)</title>
 
 <!-- Font Awesome -->
 <link rel="stylesheet"
@@ -44,9 +44,7 @@ button{
   user-select:none;
   padding:16px 16px;
 }
-button:hover{background:var(--accent);}
-button:active{transform:scale(.96);}
-#message{font-style:italic;margin-left:6px;}
+button:hover{background:var(--accent);}button:active{transform:scale(.96);}#message{font-style:italic;margin-left:6px;}
 /* ---------- EDITOR ---------- */
 #editor{
   border:1px solid var(--accent);
@@ -60,7 +58,7 @@ button:active{transform:scale(.96);}
   /* fonte/tamanho fixos */
   font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont,
                "San Francisco", system-ui, sans-serif;
-  font-size:12px;          /* = ~12 pt */
+  font-size:12px;
   line-height:1.3;
 
   /* quebra automática de linha */
@@ -69,11 +67,8 @@ button:active{transform:scale(.96);}
   white-space:pre-wrap;
 }
 
-/* aplica a MESMA fonte/tamanho a qualquer elemento dentro do editor
-   (spans gerados pelo browser, links, colagens do Word, etc.) */
-#editor *,
-#editor *::before,
-#editor *::after{
+/* aplica a MESMA fonte/tamanho a qualquer elemento dentro do editor */
+#editor *,#editor *::before,#editor *::after{
   font-family:inherit !important;
   font-size:inherit  !important;
   white-space:pre-wrap !important;
@@ -82,7 +77,6 @@ button:active{transform:scale(.96);}
 }
 
 #editor p{margin:2px 0;line-height:1.3;}
-/* tarja de texto -------------------------------------------------- */
 /* ---------- TARJA DE TEXTO ---------- */
 .hidden-text{
   /* visual */
@@ -93,21 +87,20 @@ button:active{transform:scale(.96);}
   user-select:none;
 
   /* espaçamento */
-  display:inline;                   /* permite quebra interna */
-  padding:2px 2px;                  /* respiro interno */
-  margin:2px 0;                     /* respiro entre tarjas diferentes */
-  
-      /* ↓ NOVO – faz o fundo parar no texto, criando o espacinho */
-  -webkit-background-clip:content-box; /* Safari / Chrome */
-          background-clip:content-box; /* Firefox / Edge   */
-  
-      /* faz a tarja “clonar” em cada linha quebrada */
+  display:inline-block;          /* permite margens verticais */
+  padding:2px 2px;               /* respiro interno */
+  margin:4px 0;                  /* respiro entre tarjas empilhadas */
+
+  /* ↓ faz o fundo parar no texto, criando o espacinho */
+  -webkit-background-clip:content-box;
+          background-clip:content-box;
+
+  /* faz a tarja “clonar” em cada linha quebrada */
   -webkit-box-decoration-break:clone;
   box-decoration-break:clone;
-  
+
   transition:background .2s;
 }
-
 .hidden-text.revealed{
   background:var(--reveal-bg);
   color:inherit;
@@ -115,8 +108,7 @@ button:active{transform:scale(.96);}
 /* ---------- IMAGENS & TARJAS ---------- */
 .image-container{position:relative;display:inline-block;user-select:none;}
 .image-container img{display:block;max-width:100%;height:auto;cursor:default;}
-.tarja{position:absolute;background:rgba(0,0,0,.95);cursor:move;border-radius:var(--radius);}
-/* ---------- PALETA ---------- */
+.tarja{position:absolute;background:rgba(0,0,0,.95);cursor:move;border-radius:var(--radius);}/* ---------- PALETA ---------- */
 #palette{
   position:absolute;top:100%;left:0;margin-top:4px;
   display:grid;grid-template-columns:repeat(8,24px);gap:4px;
@@ -129,7 +121,7 @@ button:active{transform:scale(.96);}
 }
 #palette.show{visibility:visible;opacity:1;}
 .swatch{width:24px;height:24px;border:2px solid var(--surface);border-radius:var(--radius);cursor:pointer;user-select:none;}
-.swatch:hover{border-color:var(--text);}
+.swatch:hover{border-color:var(--text);}  
 </style>
 </head>
 <body>
@@ -197,7 +189,7 @@ editor.addEventListener('keydown',e=>{
 const palette = document.getElementById('palette');
 const defaultColors=["#ffffff","#BF5BF3","#FF443B","#FF9F0C","#FFD60C","#0C84FE","#2DD158","#8E8D92"];
 const saveSel = ()=>{const s=window.getSelection();if(s.rangeCount)savedRange=s.getRangeAt(0).cloneRange();};
-const restoreSel=()=>{if(!savedRange)return;const s=window.getSelection();s.removeAllRanges();s.addRange(savedRange);};
+const restoreSel=()=>{if(!savedRange)return;const s=window.getSelection();s.removeAllRanges();s.addRange(savedRange);} ;
 let savedRange=null;
 
 defaultColors.forEach(c=>{
@@ -218,7 +210,6 @@ colorBtn.onclick = ()=>{
 };
 document.addEventListener('click',e=>{if(!palette.contains(e.target)&&e.target!==colorBtn)palette.classList.remove('show');});
 
-/* ---------- OCULTAR / REVELAR TEXTO ---------- */
 /* ---------- OCULTAR / REVELAR TEXTO ---------- */
 hideBtn.onclick = () => {
   const sel = window.getSelection();
@@ -246,23 +237,21 @@ hideBtn.onclick = () => {
   }
 
   /* --- 3. nova tarja: cria um <span> para CADA linha ------------------------------ */
-  const text  = range.toString();
-  const lines = text.split(/\n/);            /* detecta quebras de linha */
+  const clone = range.cloneContents();          // preserva HTML da seleção
+  const tmp   = document.createElement('div');
+  tmp.appendChild(clone);
+  const text  = tmp.innerText;                  // <p>, <div> e <br> viram \n
+  const lines = text.split(/\n/);              // cada linha mantém suas quebras
   const frag  = document.createDocumentFragment();
 
-lines.forEach((line, i) => {
-  const span = document.createElement('span');
-  span.className = 'hidden-text';
-  span.textContent = line || '\u200B';
-  span.onclick = () => span.classList.toggle('revealed');
-
-  const wrapper = document.createElement('div');
-  wrapper.style.display = 'inline-block';
-  wrapper.appendChild(span);
-  frag.appendChild(wrapper);
-
-  if (i < lines.length - 1) frag.appendChild(document.createElement('br'));
-});
+  lines.forEach((line, i) => {
+    const span = document.createElement('span');
+    span.className  = 'hidden-text';
+    span.textContent = line || '\u200B';     /* mantém linhas vazias */
+    span.onclick    = () => span.classList.toggle('revealed');
+    frag.appendChild(span);
+    if (i < lines.length - 1) frag.appendChild(document.createElement('br'));
+  });
 
   range.deleteContents();
   range.insertNode(frag);
@@ -276,7 +265,6 @@ lines.forEach((line, i) => {
   sel.removeAllRanges();
   sel.addRange(newR);
 };
-
 
 /* ---------- LIMPAR FORMATAÇÃO ---------- */
 clearBtn.onclick = () => {
@@ -370,7 +358,7 @@ const insertBtn=document.getElementById('insertBtn'),concluirBtn=document.getEle
 let deleteTarjaMode = false;   // estamos aguardando o clique em uma tarja?
 const message=document.getElementById('message');
 let editingTarjas=false,selectedImage=null;const tarjasMap=new Map();
-insertBtn.onclick=()=>{editingTarjas=true;message.textContent='Clique na imagem…';toggleTarjaBtns(true);};
+insertBtn.onclick=()=>{editingTarjas=true;message.textContent='Clique na imagem…';toggleTarjaBtns(true);} ;
 concluirBtn.onclick=endEditing;
       deleteTarjaBtn.onclick = () => {
   if (!selectedImage){
