--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Editor de Texto – Modo Escuro (v3.6)</title>
+<title>Editor de Texto – Modo Escuro (v3.5)</title>
 
 <!-- Font Awesome -->
 <link rel="stylesheet"
@@ -44,7 +44,9 @@ button{
   user-select:none;
   padding:16px 16px;
 }
-button:hover{background:var(--accent);}button:active{transform:scale(.96);}#message{font-style:italic;margin-left:6px;}
+button:hover{background:var(--accent);}
+button:active{transform:scale(.96);}
+#message{font-style:italic;margin-left:6px;}
 /* ---------- EDITOR ---------- */
 #editor{
   border:1px solid var(--accent);
@@ -58,7 +60,7 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
   /* fonte/tamanho fixos */
   font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont,
                "San Francisco", system-ui, sans-serif;
-  font-size:12px;
+  font-size:12px;          /* = ~12 pt */
   line-height:1.3;
 
   /* quebra automática de linha */
@@ -67,8 +69,11 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
   white-space:pre-wrap;
 }
 
-/* aplica a MESMA fonte/tamanho a qualquer elemento dentro do editor */
-#editor *,#editor *::before,#editor *::after{
+/* aplica a MESMA fonte/tamanho a qualquer elemento dentro do editor
+   (spans gerados pelo browser, links, colagens do Word, etc.) */
+#editor *,
+#editor *::before,
+#editor *::after{
   font-family:inherit !important;
   font-size:inherit  !important;
   white-space:pre-wrap !important;
@@ -77,6 +82,7 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
 }
 
 #editor p{margin:2px 0;line-height:1.3;}
+/* tarja de texto -------------------------------------------------- */
 /* ---------- TARJA DE TEXTO ---------- */
 .hidden-text{
   /* visual */
@@ -87,20 +93,21 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
   user-select:none;
 
   /* espaçamento */
-  display:inline-block;          /* permite margens verticais */
-  padding:2px 2px;               /* respiro interno */
-  margin:4px 0;                  /* respiro entre tarjas empilhadas */
-
-  /* ↓ faz o fundo parar no texto, criando o espacinho */
-  -webkit-background-clip:content-box;
-          background-clip:content-box;
-
-  /* faz a tarja “clonar” em cada linha quebrada */
+  display:inline-block;   /* agora a margem vertical passa a valer             */
+  margin:1px 0;           /* espaço acima e abaixo da tarja (ajuste à vontade) */
+  line-height:1.3;        /* mantive a mesma altura de linha que já usava      */
+  
+      /* ↓ NOVO – faz o fundo parar no texto, criando o espacinho */
+  -webkit-background-clip:content-box; /* Safari / Chrome */
+          background-clip:content-box; /* Firefox / Edge   */
+  
+      /* faz a tarja “clonar” em cada linha quebrada */
   -webkit-box-decoration-break:clone;
   box-decoration-break:clone;
-
+  
   transition:background .2s;
 }
+
 .hidden-text.revealed{
   background:var(--reveal-bg);
   color:inherit;
@@ -108,7 +115,8 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
 /* ---------- IMAGENS & TARJAS ---------- */
 .image-container{position:relative;display:inline-block;user-select:none;}
 .image-container img{display:block;max-width:100%;height:auto;cursor:default;}
-.tarja{position:absolute;background:rgba(0,0,0,.95);cursor:move;border-radius:var(--radius);}/* ---------- PALETA ---------- */
+.tarja{position:absolute;background:rgba(0,0,0,.95);cursor:move;border-radius:var(--radius);}
+/* ---------- PALETA ---------- */
 #palette{
   position:absolute;top:100%;left:0;margin-top:4px;
   display:grid;grid-template-columns:repeat(8,24px);gap:4px;
@@ -121,7 +129,7 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
 }
 #palette.show{visibility:visible;opacity:1;}
 .swatch{width:24px;height:24px;border:2px solid var(--surface);border-radius:var(--radius);cursor:pointer;user-select:none;}
-.swatch:hover{border-color:var(--text);}  
+.swatch:hover{border-color:var(--text);}
 </style>
 </head>
 <body>
@@ -165,7 +173,7 @@ document.execCommand('styleWithCSS', false, true);
 const params      = new URLSearchParams(location.search);
 const disc        = params.get('disc') || 'Geral';
 const sub         = params.get('sub')  || '00';
-const storageKey  = `summary_${disc}_${sub}`;
+const storageKey  = summary_${disc}_${sub};
 const storage     = window.parent && window.parent.localStorage
                   ? window.parent.localStorage
                   : localStorage;
@@ -189,7 +197,7 @@ editor.addEventListener('keydown',e=>{
 const palette = document.getElementById('palette');
 const defaultColors=["#ffffff","#BF5BF3","#FF443B","#FF9F0C","#FFD60C","#0C84FE","#2DD158","#8E8D92"];
 const saveSel = ()=>{const s=window.getSelection();if(s.rangeCount)savedRange=s.getRangeAt(0).cloneRange();};
-const restoreSel=()=>{if(!savedRange)return;const s=window.getSelection();s.removeAllRanges();s.addRange(savedRange);} ;
+const restoreSel=()=>{if(!savedRange)return;const s=window.getSelection();s.removeAllRanges();s.addRange(savedRange);};
 let savedRange=null;
 
 defaultColors.forEach(c=>{
@@ -210,6 +218,7 @@ colorBtn.onclick = ()=>{
 };
 document.addEventListener('click',e=>{if(!palette.contains(e.target)&&e.target!==colorBtn)palette.classList.remove('show');});
 
+/* ---------- OCULTAR / REVELAR TEXTO ---------- */
 /* ---------- OCULTAR / REVELAR TEXTO ---------- */
 hideBtn.onclick = () => {
   const sel = window.getSelection();
@@ -237,11 +246,12 @@ hideBtn.onclick = () => {
   }
 
   /* --- 3. nova tarja: cria um <span> para CADA linha ------------------------------ */
-  const clone = range.cloneContents();          // preserva HTML da seleção
-  const tmp   = document.createElement('div');
-  tmp.appendChild(clone);
-  const text  = tmp.innerText;                  // <p>, <div> e <br> viram \n
-  const lines = text.split(/\n/);              // cada linha mantém suas quebras
+ /* --- NO MESMO PONTO EM QUE ESTAVA O CÓDIGO ORIGINAL --- */
+const clone = range.cloneContents();          // pega HTML da seleção
+const tmp   = document.createElement('div');
+tmp.appendChild(clone);
+const text  = tmp.innerText;                  // mantém \n de <p>, <div>, <br>…
+const lines = text.split(/\n/);               // agora cada linha é real
   const frag  = document.createDocumentFragment();
 
   lines.forEach((line, i) => {
@@ -265,6 +275,7 @@ hideBtn.onclick = () => {
   sel.removeAllRanges();
   sel.addRange(newR);
 };
+
 
 /* ---------- LIMPAR FORMATAÇÃO ---------- */
 clearBtn.onclick = () => {
@@ -358,7 +369,7 @@ const insertBtn=document.getElementById('insertBtn'),concluirBtn=document.getEle
 let deleteTarjaMode = false;   // estamos aguardando o clique em uma tarja?
 const message=document.getElementById('message');
 let editingTarjas=false,selectedImage=null;const tarjasMap=new Map();
-insertBtn.onclick=()=>{editingTarjas=true;message.textContent='Clique na imagem…';toggleTarjaBtns(true);} ;
+insertBtn.onclick=()=>{editingTarjas=true;message.textContent='Clique na imagem…';toggleTarjaBtns(true);};
 concluirBtn.onclick=endEditing;
       deleteTarjaBtn.onclick = () => {
   if (!selectedImage){
@@ -443,13 +454,13 @@ function wrapImage(img){
 function setupInteract(el){
   interact(el).draggable({listeners:{move(evt){
     if(!editingTarjas)return;const x=(+el.dataset.x||0)+evt.dx,y=(+el.dataset.y||0)+evt.dy;
-    el.style.transform=`translate(${x}px,${y}px)`;el.dataset.x=x;el.dataset.y=y;
+    el.style.transform=translate(${x}px,${y}px);el.dataset.x=x;el.dataset.y=y;
   }}})
   .resizable({edges:{left:true,right:true,top:true,bottom:true},listeners:{move(evt){
     if(!editingTarjas)return;let x=+el.dataset.x||0,y=+el.dataset.y||0;
     el.style.width=evt.rect.width+'px';el.style.height=evt.rect.height+'px';
     x+=evt.deltaRect.left;y+=evt.deltaRect.top;
-    el.style.transform=`translate(${x}px,${y}px)`;el.dataset.x=x;el.dataset.y=y;
+    el.style.transform=translate(${x}px,${y}px);el.dataset.x=x;el.dataset.y=y;
   }}});
 }
 function endEditing(){
@@ -531,4 +542,4 @@ window.addEventListener('DOMContentLoaded',()=>{
 /* ---------- FIM DO SCRIPT ---------- */
 </script>
 </body>
-</html>
+</html> 
