--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@ function showSubjects(disc) {
     /* Calcula desempenho para cor da faixa */
     const qs = questoesData[disc][sub];
     const [c,a] = qs.reduce(([c,a],_,i)=>{
-      const st = +localStorage.getItem(`${disc}_${sub}_${i}`)||0;
+        const st = +localStorage.getItem(qKey(disc, sub, q.label)) || 0;
       return [c + (st===1), a + (st===1||st===2)];
     },[0,0]);
     const pct = a ? c/a*100 : null;
